@@ -23,6 +23,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Virsacer - virsacer 
 + patch #2506831 [privileges] Create user for existing database, 
   thanks to Herman van Rink - helmo
++ patch #2505255 [privileges] Cleanup, thanks to Virsacer - virsacer 
 
 3.1.3.0 (not yet released)
 + [lang] Turkish update, thanks to Burak Yavuz
